# sync-to-readwise

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  doppler.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
prototypes/: status-page.html
src/sync_to_readwise/: __main__.py  cli.py  registry.py
src/sync_to_readwise/core/: __init__.py  config.py  item.py  logging.py  readwise.py  source.py  state.py  syncer.py
src/sync_to_readwise/sources/: github_stars.py  youtube.py
src/sync_to_readwise/web/: __init__.py  app.py  render.py  server.py
tests/: conftest.py  test_cli.py  test_config.py  test_core_misc.py  test_github_stars.py  test_readwise.py  test_registry.py  test_state.py  test_web.py  test_youtube.py
