[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-to-readwise"
version = "0.1.0"
description = "Pluggable framework for syncing content from third-party sources into Readwise Reader."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Allen Hutchison" }]
dependencies = [
    "httpx>=0.27",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.30",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
]

[project.scripts]
sync-to-readwise = "sync_to_readwise.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sync_to_readwise"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
