[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-to-readwise"
version = "0.1.0"
description = "Pluggable framework for syncing content from third-party sources into Readwise Reader."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Allen Hutchison" }]
dependencies = [
    "httpx>=0.27",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.53.0",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
]

[project.scripts]
sync-to-readwise = "sync_to_readwise.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.15.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sync_to_readwise"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=sync_to_readwise",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]

[tool.coverage.run]
branch = true
source = ["sync_to_readwise"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
